# definitively

./: .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  AGENTS.md  README.md  devenv.nix  devenv.yaml  flake.nix  install.sh  moon.yml  package.json  pyproject.toml
.cursor/: README.md  hooks.json  mcp.json  settings.json
.cursor/commands/: agent.md  e2e-fix.md  plan-hierarchically.md  skill.md  skills.md  superpowers.md
.cursor/hooks/: block-native-web-search.sh  format-after-edit.sh
.cursor/plans/: agent_profile_refactor_054927eb.plan.md  fsm_workflow_ddd_model_be25dfb3.plan.md
.cursor/rules/: mcp-servers.mdc  roam.mdc  serena.mdc
.definitively/: README.md  env.example
.definitively/agents/: README.md  cursor.yml  stub.yml
.definitively/autoresearch/: README.md  candidate.exs
.definitively/programs/: autoresearch.yml  dev-quality-loop.yml  plan-mission.yml  pre-commit-gate.yml  pre-push-gate.yml
.definitively/prompts/: autoresearch-fix-crash.md  (+14 more)
.maestro/: AGENTS.md  MAESTRO.md
.moon/: workspace.yml
.orchestrator/: README.md
book/: book.toml
definitively/: .doctor.exs  .gitignore  README.md  install.sh  mix.exs  moon.yml  orch_test_out.dot
docs/: definitively-distribution.md  orchestrator-distribution.md
nix/: definitively.nix  devenv-module.nix  orchestrator.nix
orchestrator/: .credo.exs  .gitignore  LICENSE  README.md  install.sh  mix.exs  moon.yml
project_template_venv/: __init__.py
scripts/: commit-msg.sh  lean-ctx-mcp-wrapper.sh  moon-cargo-gate.sh  postgres-mcp-wrapper.sh  roam-mcp-wrapper.sh  serena-mcp-wrapper.sh
(+380 files in other folders)
