# Minimal Python workspace: devenv `uv sync` installs the Serena MCP CLI into
# `.devenv/state/venv/bin` (see `devenv.nix` languages.python.uv.sync). No runtime
# Python code from this package is required for normal Rust/TS work.
[project]
name = "project-template-venv"
version = "0.0.0"
description = "Devenv uv anchor for Serena MCP (dependency-groups only)"
requires-python = ">=3.12"
readme = "README.md"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["project_template_venv"]

# Serena MCP server: https://github.com/oraios/serena — see `scripts/serena-mcp-wrapper.sh`.
[dependency-groups]
serena = ["serena-agent>=0.1.4"]
